# VidorNina-ESP32

./: .gitmodules  README.md
HDL/: output_file.cof
HDL/ip/PTP/: ID_Switch.v.bak  clock_divider.v  clock_divider_hw.tcl  id_switch_hw.tcl  id_switch_hw.tcl~  piezo_clk_div_hw.tcl  piezo_clk_div_hw.tcl~  piezo_controller_hw.tcl  piezo_ctl2.v  piezo_ctl2.v.bak  ptp_simple_us_hw.tcl  realtime_clock_controll.v  realtime_clock_controll.v.bak  realtime_clock_controll_hw.tcl
HDL/ip/VHDL/: piezo_controller.vhd
HDL/ip/Verilog/: DE0_Nano_SoC_top_level.v  clock_divider.v  ptp_via_US.v
HDL/projects/MKRVIDOR4000_template/: ICEboardControl_hw.tcl  ICEboardControl_hw.tcl~  MKRVIDOR4000.qsf  MKRVIDOR4000.qws  MKRVIDOR4000_assignment_defaults.qdf  MKRVIDOR4000_top.v  app.h  coms.sv  coms.v  iCEboardControl.sv  out_cfg0.cof  output_file.cof  pll10MHz.ppf  pll10MHz.qip  pll10MHz.v  pll10MHz_bb.v  pll20MHz.ppf  pll20MHz.qip  pll20MHz.v  pll20MHz_bb.v  quartus_pos_cfg.tcl  serv_req_info.txt  uart_rx.v  uart_tx.v  vidor_sys.qsys  vidor_sys.sopcinfo
HDL/projects/MKRVIDOR4000_template/.qsys_edit/: preferences.xml  vidor_sys.xml  vidor_sys_schematic.nlv
HDL/projects/MKRVIDOR4000_template/greybox_tmp/: cbx_args.txt
HDL/projects/MKRVIDOR4000_template/vidor_sys/: vidor_sys.bsf  vidor_sys.cmp  vidor_sys.html  vidor_sys.xml  vidor_sys_bb.v  vidor_sys_generation.rpt  vidor_sys_generation_previous.rpt  vidor_sys_inst.v  vidor_sys_inst.vhd
doc/: workingNinaSPi
software/catkin/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
software/catkin/src/triang_master/: CMakeLists.txt  package.xml
software/nina/: Makefile.old  sdkconfig  sdkconfig.old
software/nina/component/SPIbus/: Kconfig
software/nina/component/ninaWifi/: CMakeLists.txt  Kconfig.projbuild  Makefile.projbuild
software/nina/dump/: mode_ctl.cpp  mode_ctl.hpp  time_sync.cpp  time_sync.hpp
software/nina/libary/: CMakeLists.txt
software/nina/libary/include/: FpgaVidor.hpp  config.hpp  interface0.hpp
software/nina/libary/src/: FpgaVidor.cpp  interface.cpp  interface0.cpp
software/nina/main/: .main.cpp.swp  main.cpp
software/nina_sub/: sdkconfig
software/nina_sub/dump/: mode_ctl.cpp  mode_ctl.hpp
software/nina_sub/libary/: Makefile.projbuild
software/nina_sub/libary/include/: FpgaVidor.hpp  mode_ctl.hpp  msg.hpp  time_sync.hpp
software/nina_sub/main/: main.cpp
software/nina_test/: Makefile  sdkconfig  sdkconfig.old
software/nina_test/main/: main.cpp
software/pi_master/: CMakeLists.txt
software/pi_master/lib/: common.hpp  rviz_interface.hpp  udp_data.hpp  udp_data_rx.hpp  udp_data_tx.hpp
software/pi_master/src/: main.cpp  rviz_interface.cpp  udp_data.cpp  udp_data_rx.cpp  udp_data_tx.cpp
software/roboy2_forearm_control/: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
software/roboy2_forearm_control/src/: main.c
software/vidorSAM/: AvalonMM.cpp  ICEboardVidor.h  ReverseByte.java  app.h  vidorSAM.ino
software/visualitation/: CMakeLists.txt
software/visualitation/src/: main.cpp
(+58 files in other folders)
